# theia-django

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: views.py
app/services/: asgi.py  reader_ai.py  whisper_ai.py
server/app/: settings.py
src/: db.sqlite3  settings.py  urls.py  views.py
src/apis/: openai_api.py
src/davinci/: urls.py  views.py
src/server/: settings.py  urls.py  views.py
src/services/: reader_ai.py  spider.py  whisper_ai.py
src/services/apis/: openai_api.py
src/theia/: apps.py  urls.py  views.py
src/welcome/: urls.py  views.py
