[tool.poetry]
name = "theia-server"
version = "1.0.0"
description = "Theia Server"
authors = ["Theia Labs <github.com/theia-ailabs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
